Tue Nov 23 20:35:05 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/Display.cc(setVariables & createURL),
	htsearch/htsearch.cc(main), htdoc/hts_templates.html: handle keywords
	input parameter like others, and make it propagate to followups.

Tue Nov 23 20:25:45 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdoc/attrs.html: removed vestigial references to MAX_MATCHES
	template variables in search_results_{header,footer}.

	* htdoc/hts_form.html: add disclaimer about keywords parameter not
	being limited to meta keywords.

	* htdoc/meta.html: add description of "keywords" meta tag property.
	add links to keywords_factor & meta_description_factor attributes.

Tue Nov 23 20:07:20 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/Display.cc(setVariables & hilight): added Sergey's idea
	for start_highlight, end_highlight & page_number_separator attributes.
	* htcommon/defaults.cc: added defaults for these.
	* htdoc/attrs.html, cf_by{name,prog}.html: documented them.

Tue Nov 23 19:58:28 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/ExternalParser.cc: added support for external converters
	as extension to external_parsers attribute.
	* htdoc/attrs.html: Updated external_parsers with new description
	and examples of external converters.

Tue Nov 23 19:52:27 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/HTML.cc(transSGML), htdig/SGMLEntities.cc(translateAndUpdate):
	Fix the infamous problem in htdig 3.1.3 of mangling URL parameters that
	contain bare ampersands (&), and not converting &amp; entities in URLs.

	* htdig/Retriever.cc(IsLocal & IsLocalUser): Fix PR#688, where
	htdig goes into an infinite loop if an entry in local_urls
	(or local_user_urls) is missing a '=' (or a ',').

	* htcommon/cgi.cc(cgi): Fix bug in reading long queries via POST
	method (PR#668).

	* htnotify/htnotify.cc(send_notification): apply Jason Haar's fix
	to quote the sender name "ht://Dig Notification Service".
