@@ -1,46 +1,27 @@
 //
 // cgi.cc
 //
-// Implementation of cgi
+// cgi: Parse cgi arguments and put them in a dictionary.
 //
-// $Log: cgi.cc,v $
-// Revision 1.5.2.2  1999/11/24 01:52:21  grdetil
-// htcommon/cgi.cc(init): Fix bug in reading long queries via POST method (PR#668).
+// Part of the ht://Dig package   <http://www.htdig.org/>
+// Copyright (c) 1999 The ht://Dig Group
+// For copyright details, see the file COPYING in your distribution
+// or the GNU Public License version 2 or later 
+// <http://www.gnu.org/copyleft/gpl.html>
 //
-// Revision 1.5.2.1  1999/09/01 20:27:29  grdetil
-// Fix PR#572, where htsearch crashed if CONTENT_LENGTH was not set but REQUEST_METHOD was.
+// $Id: cgi.cc,v 1.5.2.3 1999/11/24 03:09:17 grdetil Exp $
 //
-// Revision 1.5  1999/01/20 18:08:30  ghutchis
-// Call good_strtok with appropriate parameters (explicitly include NULL first
-// parameter, second param is char, not char *).
-//
-// Revision 1.4  1998/11/15 02:44:23  ghutchis
-//
-// Declared loop int variable. (to simplify frost.com merge)
-//
-// Revision 1.3  1998/05/26 03:58:11  turtle
-// Got rid of compiler warnings.
-//
-// Revision 1.2  1997/03/24 04:33:23  turtle
-// Renamed the String.h file to htString.h to help compiling under win32
-//
-// Revision 1.1.1.1  1997/02/03 17:11:04  turtle
-// Initial CVS
-//
-//
-#if RELEASE
-static char RCSid[] = "$Id: cgi.cc,v 1.5.2.2 1999/11/24 01:52:21 grdetil Exp $";
-#endif
 
 #include "cgi.h"
 #include "htString.h"
-#include <Dictionary.h>
-#include <good_strtok.h>
+#include "Dictionary.h"
+#include "good_strtok.h"
+#include "StringList.h"
+#include "URL.h"
+
 #include <stdlib.h>
 #include <unistd.h>
 #include <fstream.h>
-#include <StringList.h>
-#include <URL.h>
 
 
 //*****************************************************************************
@@ -48,12 +29,31 @@ static char RCSid[] = "$Id: cgi.cc,v 1.5.2.2 1999/11/24 01:52:21 grdetil Exp $";
 //
 cgi::cgi()
 {
+	init("");
+}
+
+
+//*****************************************************************************
+// cgi::cgi(char *s)
+//
+cgi::cgi(char *s)
+{
+	init(s);
+}
+
+
+//*****************************************************************************
+// void cgi::init(char *s)
+//
+void
+cgi::init(char *s)
+{
 	pairs = new Dictionary;
 
 	int i;
 	String	method(getenv("REQUEST_METHOD"));
 
-	if (method.length() == 0)
+	if ((!s || !*s) && method.length() == 0)
 	{
 		//
 		// Interactive mode
@@ -64,7 +64,11 @@ cgi::cgi()
 	query = 0;
 	String	results;
 
-	if (strcmp(method, "GET") == 0)
+	if (s && *s && method.length() == 0)
+	{
+		results = s;
+	}
+	else if (strcmp((char*)method, "GET") == 0)
 	{
 		results = getenv("QUERY_STRING");
 	}
