@@ -1,3 +1,8 @@
+Tue Nov 23 20:52:38 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
+
+	* htlib/cgi.h, htlib/cgi.cc(cgi & init), htsearch/htsearch.cc
+        (main & usage): allow a query string to be passed as an argument.
+
 Tue Nov 23 20:35:05 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
 
 	* htsearch/Display.cc(setVariables & createURL),
